--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div class="content">
 			<h4>Hello, my name is</h4>
-			<h1>Reynaldo <span>Mimis</span></h1>
+			<h1>Reynaldo <span class="name">Mimis</span></h1>
 			<h3>I'am a Android & Software Developer.</h3>
 			<div class="newslatter">
 				<form>
