--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Port<span>folio</span></h2>
+			<h2 class="logo">PORT<span>folio</span></h2>
 			<ul>
 				<li><a href="#">PROJECTS</a></li>
 				<li><a href="#">SERVICES</a></li>
@@ -27,7 +27,7 @@
 		<div class="content">
 			<h4>Hello, my name is</h4>
 			<h1>Reynaldo <span class="name">Mimis</span></h1>
-			<h3>I'am a Android & Software Developer.</h3>
+			<h3>I'am Android & Software Developer.</h3>
 			<div class="newslatter">
 				<form>
 					<input type="submit" name="submit" value="Hire Me">
@@ -49,7 +49,6 @@
 		</div>
 	</section>
 
-	<!-----service section start----------->
 	<div class="service">
 		<div class="title">
 			<h2>Our Services</h2>
